// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

enum ComputeDiskGuestOsFeatureTypeEnum {
  ComputeDiskGuestOsFeatureTypeEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeDiskGuestOsFeatureTypeEnumFEATURE_TYPE_UNSPECIFIED = 1;
  ComputeDiskGuestOsFeatureTypeEnumVIRTIO_SCSI_MULTIQUEUE = 2;
  ComputeDiskGuestOsFeatureTypeEnumWINDOWS = 3;
  ComputeDiskGuestOsFeatureTypeEnumMULTI_IP_SUBNET = 4;
  ComputeDiskGuestOsFeatureTypeEnumUEFI_COMPATIBLE = 5;
  ComputeDiskGuestOsFeatureTypeEnumSECURE_BOOT = 6;
}

enum ComputeDiskGuestOsFeatureTypeAltEnum {
  ComputeDiskGuestOsFeatureTypeAltEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeDiskGuestOsFeatureTypeAltEnumFEATURE_TYPE_UNSPECIFIED = 1;
  ComputeDiskGuestOsFeatureTypeAltEnumVIRTIO_SCSI_MULTIQUEUE = 2;
  ComputeDiskGuestOsFeatureTypeAltEnumWINDOWS = 3;
  ComputeDiskGuestOsFeatureTypeAltEnumMULTI_IP_SUBNET = 4;
  ComputeDiskGuestOsFeatureTypeAltEnumUEFI_COMPATIBLE = 5;
  ComputeDiskGuestOsFeatureTypeAltEnumSECURE_BOOT = 6;
}

enum ComputeDiskStatusEnum {
  ComputeDiskStatusEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeDiskStatusEnumPENDING = 1;
  ComputeDiskStatusEnumRUNNING = 2;
  ComputeDiskStatusEnumDONE = 3;
}

enum ComputeDiskGuestOsFeaturesTypeEnum {
  ComputeDiskGuestOsFeaturesTypeEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeDiskGuestOsFeaturesTypeEnumPATH = 1;
  ComputeDiskGuestOsFeaturesTypeEnumOTHER = 2;
  ComputeDiskGuestOsFeaturesTypeEnumPARAMETER = 3;
}

enum ComputeDiskGuestOsFeaturesTypeAltsEnum {
  ComputeDiskGuestOsFeaturesTypeAltsEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeDiskGuestOsFeaturesTypeAltsEnumFEATURE_TYPE_UNSPECIFIED = 1;
  ComputeDiskGuestOsFeaturesTypeAltsEnumVIRTIO_SCSI_MULTIQUEUE = 2;
  ComputeDiskGuestOsFeaturesTypeAltsEnumWINDOWS = 3;
  ComputeDiskGuestOsFeaturesTypeAltsEnumMULTI_IP_SUBNET = 4;
  ComputeDiskGuestOsFeaturesTypeAltsEnumUEFI_COMPATIBLE = 5;
  ComputeDiskGuestOsFeaturesTypeAltsEnumSECURE_BOOT = 6;
  ComputeDiskGuestOsFeaturesTypeAltsEnumSEV_CAPABLE = 7;
}

message ComputeDisk {
  string self_link = 1;
  string description = 2;
  ComputeDiskEncryptionKey disk_encryption_key = 3;
  repeated ComputeDiskGuestOsFeature guest_os_feature = 4;
  map<string, string> labels = 5;
  string label_fingerprint = 6;
  repeated string license = 7;
  string name = 8;
  string region = 9;
  repeated string replica_zones = 10;
  repeated string resource_policy = 11;
  int64 size_gb = 12;
  string source_image = 13;
  ComputeDiskEncryptionKey source_image_encryption_key = 14;
  string source_image_id = 15;
  string source_snapshot = 16;
  ComputeDiskEncryptionKey source_snapshot_encryption_key = 17;
  string source_snapshot_id = 18;
  string type = 19;
  string zone = 20;
  string project = 21;
  int64 id = 22;
  ComputeDiskStatusEnum status = 23;
  string options = 24;
  repeated string licenses = 25;
  repeated ComputeDiskGuestOsFeatures guest_os_features = 26;
  string last_attach_timestamp = 27;
  string last_detach_timestamp = 28;
  repeated string users = 29;
  repeated int64 license_codes = 30;
  int64 physical_block_size_bytes = 31;
  repeated string resource_policies = 32;
  string source_disk = 33;
  string source_disk_id = 34;
  string location = 35;
}

message ComputeDiskGuestOsFeature {
  ComputeDiskGuestOsFeatureTypeEnum type = 1;
  repeated ComputeDiskGuestOsFeatureTypeAltEnum type_alt = 2;
}

message ComputeDiskEncryptionKey {
  string raw_key = 1;
  string kms_key_name = 2;
  string sha256 = 3;
  string kms_key_service_account = 4;
}

message ComputeDiskGuestOsFeatures {
  ComputeDiskGuestOsFeaturesTypeEnum type = 1;
  repeated ComputeDiskGuestOsFeaturesTypeAltsEnum type_alts = 2;
}

message ApplyComputeDiskRequest {
  ComputeDisk resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteComputeDiskRequest {
  string service_account_file = 1;
  ComputeDisk resource = 2;
}

message ListComputeDiskRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListComputeDiskResponse {
  repeated ComputeDisk items = 1;
}
service ComputeDiskService {
  rpc ApplyComputeDisk(ApplyComputeDiskRequest) returns (ComputeDisk);
  rpc DeleteComputeDisk(DeleteComputeDiskRequest) returns (google.protobuf.Empty);
  rpc ListComputeDisk(ListComputeDiskRequest) returns (ListComputeDiskResponse);
}
