// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

message NetworksecurityBetaClientTlsPolicy {
  string name = 1;
  string description = 2;
  string create_time = 3;
  string update_time = 4;
  map<string, string> labels = 5;
  string sni = 6;
  NetworksecurityBetaClientTlsPolicyClientCertificate client_certificate = 7;
  repeated NetworksecurityBetaClientTlsPolicyServerValidationCa server_validation_ca = 8;
  string project = 9;
  string location = 10;
}

message NetworksecurityBetaClientTlsPolicyClientCertificate {
  NetworksecurityBetaClientTlsPolicyClientCertificateLocalFilepath local_filepath = 1;
  NetworksecurityBetaClientTlsPolicyClientCertificateGrpcEndpoint grpc_endpoint = 2;
  NetworksecurityBetaClientTlsPolicyClientCertificateCertificateProviderInstance certificate_provider_instance = 3;
}

message NetworksecurityBetaClientTlsPolicyClientCertificateLocalFilepath {
  string certificate_path = 1;
  string private_key_path = 2;
}

message NetworksecurityBetaClientTlsPolicyClientCertificateGrpcEndpoint {
  string target_uri = 1;
}

message NetworksecurityBetaClientTlsPolicyClientCertificateCertificateProviderInstance {
  string plugin_instance = 1;
}

message NetworksecurityBetaClientTlsPolicyServerValidationCa {
  string ca_cert_path = 1;
  NetworksecurityBetaClientTlsPolicyServerValidationCaGrpcEndpoint grpc_endpoint = 2;
  NetworksecurityBetaClientTlsPolicyServerValidationCaCertificateProviderInstance certificate_provider_instance = 3;
}

message NetworksecurityBetaClientTlsPolicyServerValidationCaGrpcEndpoint {
  string target_uri = 1;
}

message NetworksecurityBetaClientTlsPolicyServerValidationCaCertificateProviderInstance {
  string plugin_instance = 1;
}

message ApplyNetworksecurityBetaClientTlsPolicyRequest {
  NetworksecurityBetaClientTlsPolicy resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteNetworksecurityBetaClientTlsPolicyRequest {
  string service_account_file = 1;
  NetworksecurityBetaClientTlsPolicy resource = 2;
}

message ListNetworksecurityBetaClientTlsPolicyRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListNetworksecurityBetaClientTlsPolicyResponse {
  repeated NetworksecurityBetaClientTlsPolicy items = 1;
}

service NetworksecurityBetaClientTlsPolicyService {
  rpc ApplyNetworksecurityBetaClientTlsPolicy(ApplyNetworksecurityBetaClientTlsPolicyRequest) returns (NetworksecurityBetaClientTlsPolicy);
  rpc DeleteNetworksecurityBetaClientTlsPolicy(DeleteNetworksecurityBetaClientTlsPolicyRequest) returns (google.protobuf.Empty);
  rpc ListNetworksecurityBetaClientTlsPolicy(ListNetworksecurityBetaClientTlsPolicyRequest) returns (ListNetworksecurityBetaClientTlsPolicyResponse);
}
